--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,15 @@
     "express": "^4.17.1",
     "knex": "^0.21.1",
     "sqlite3": "^4.2.0"
+
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
   },
   "scripts": {
+    "start": "nodemon src/index.js",
     "dev": "nodemon src/index.js"
+
   },
   "keywords": [],
   "author": "",
